--- a/index.html
+++ b/index.html
@@ -35,9 +35,29 @@
                     </ul>
                 </nav>
                 <ul class="contact-list list">
-                    <li class="item"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="item"><a class="contact-link" href="mailto:info@devstudio.com">
+                            <div class="moilto">
+                                <svg class=" icon">
+                                    <use href="./images/icon.svg#icon-envelope"></use>
+                                </svg>info@devstudio.com
+                            </div>
+                        </a>
                     </li>
-                    <li class="item"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li>
+                        <use>
+
+                        </use>
+                    </li>
+                    <li class="item">
+                        <a class="contact-link" href="tel:+380961111111">
+                            <div class="moilto">
+                                <svg class=" icon-s">
+                                    <use href="./images/icon.svg#icon-smartphone"></use>
+                                </svg>
+                                +38 096 111 11 11
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -57,21 +77,41 @@
             <h2 class="visually-hidden">приимущества</h2>
             <ul class="list container">
                 <li class="item-benefit">
+                    <div class="benefit-top-box"> <svg class="benefit-logo">
+                            <use href="./images/icon.svg#antena">
+
+                            </use>
+                        </svg> </div>
                     <h3 class="benefits-title">Внимание к деталям</h3>
                     <p class="benefits-text"> Идейные соображения, а также начало повседневной работы по формированию
                         позиции.</p>
                 </li>
                 <li class="item-benefit">
+                    <div class="benefit-top-box"> <svg class="benefit-logo">
+                            <use href="./images/icon.svg#clock">
+
+                            </use>
+                        </svg> </div>
                     <h3 class="benefits-title">Пунктуальность</h3>
                     <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет
                         за собой.</p>
                 </li>
                 <li class="item-benefit">
+                    <div class="benefit-top-box"> <svg class="benefit-logo">
+                            <use href="./images/icon.svg#diagram">
+
+                            </use>
+                        </svg> </div>
                     <h3 class="benefits-title">Планирование</h3>
                     <p class="benefits-text">Равным образом консультация с широким активом в значительной степени
                         обуславливает.</p>
                 </li>
                 <li class="item-benefit">
+                    <div class="benefit-top-box"> <svg class="benefit-logo">
+                            <use href="./images/icon.svg#astronaut">
+
+                            </use>
+                        </svg> </div>
                     <h3 class="benefits-title">Современные технологии</h3>
                     <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых
                         заданий.</p>
@@ -113,24 +153,144 @@
                             width="270">
                         <h3 class="employee-name"> Игорь Демьяненко</h3>
                         <p class="employee-position">Product Designer</p>
+                        <ul class="employee-list-media">
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#insta"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#twiter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#facebok"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#linkendin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item-stuff">
                         <img class="employee-img" src="./images/wom_1.jpg" alt="фото члена команди:Ольга Репина"
                             width="270">
                         <h3 class="employee-name"> Ольга Репина </h3>
                         <p class="employee-position">Frontend Developer</p>
+                        <ul class="employee-list-media">
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item-stuff">
                         <img class="employee-img" src="./images/men_2.jpg" alt="фото члена команди:Николай Тарасов"
                             width="270">
                         <h3 class="employee-name"> Николай Тарасов </h3>
                         <p class="employee-position">Marketing</p>
+                        <ul class="employee-list-media">
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item-stuff">
                         <img class="employee-img" src="./images/men_3.jpg" alt=" фото члена команди:Михаил Ермаков"
                             width="270">
                         <h3 class="employee-name"> Михаил Ермаков </h3>
                         <p class="employee-position">UI Designer</p>
+                        <ul class="employee-list-media">
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-media">
+                                <a class="link-media" href="">
+                                    <svg class="media-svg">
+                                        <use href="./images/icon.svg#"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -138,7 +298,7 @@
     </main>
     <!-- Підвал з міінімумом навігації -->
     <footer>
-        <div class="container">
+        <div class=" container">
             <a href="./index.html" class="logo">
                 <span class="logo-blue">Web</span>Studio
             </a>
@@ -146,10 +306,13 @@
                 <ul class="list">
                     <li class="footer-item"><a target="_blank" class="address-ofice" rel="noreferrer noopener"
                             href=" https://goo.gl/maps/ZoGBy2pLPGvZENqX7">
-                            г.Киев, пр-т Леси Украинки, 26</a></li>
+                            г.Киев, пр-т Леси
+                            Украинки, 26</a></li>
                     <li class="footer-item"><a class="contact-link"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="footer-item"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                            href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-item"><a class="contact-link" href="tel:+380961111111">+38
+                            096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
