--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </section>
         <!-- Секція 4 : Перелік людей + фото людей + фах. -->
         <section class="team section ">
-            <div class="container">
+            <div class="container ">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="list">
                     <li class="item-stuff">
@@ -193,28 +193,28 @@
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use></use>
+                                        <use href="./images/icon.svg#insta"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use></use>
+                                        <use href="./images/icon.svg#twiter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use></use>
+                                        <use href="./images/icon.svg#facebok"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use></use>
+                                        <use href="./images/icon.svg#linkendin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -229,28 +229,28 @@
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#insta"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#twiter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#facebok"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#linkendin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -265,32 +265,81 @@
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#insta"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#twiter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#facebok"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-media">
                                 <a class="link-media" href="">
                                     <svg class="media-svg">
-                                        <use href="./images/icon.svg#"></use>
+                                        <use href="./images/icon.svg#linkendin"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="container section">
+                <h2 class="section-title ">Постоянные клиенты</h2>
+                <ul class="clients-list">
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg width="41" height="47" class="clients-icon">
+                                <use href="./images/icon.svg#icon-group-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg width="40" height="52" class="clients-icon">
+                                <use href="./images/icon.svg#icon-group-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg width="44" height="41" class="clients-icon">
+                                <use href="./images/icon.svg#icon-Object"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg width="84" height="41" class="clients-icon">
+                                <use href="./images/icon.svg#icon-group-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg width="63" height="46" class="clients-icon">
+                                <use href="./images/icon.svg#icon-group-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg width="94" height="44" class="clients-icon">
+                                <use href="./images/icon.svg#icon-Object-1"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
