--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     </ul>
                 </nav>
                 <ul class="contact-list list">
-                    <li class="item"><a class="contact-link" href="mailto:info@devstudio.com">
+                    <li class="item">
+                        <a class="contact-link" href="mailto:info@devstudio.com">
                             <div class="moilto">
                                 <svg class=" icon">
                                     <use href="./images/icon.svg#icon-envelope"></use>
@@ -347,23 +348,58 @@
     </main>
     <!-- Підвал з міінімумом навігації -->
     <footer>
-        <div class=" container">
-            <a href="./index.html" class="logo">
-                <span class="logo-blue">Web</span>Studio
-            </a>
-            <address>
-                <ul class="list">
-                    <li class="footer-item"><a target="_blank" class="address-ofice" rel="noreferrer noopener"
-                            href=" https://goo.gl/maps/ZoGBy2pLPGvZENqX7">
-                            г.Киев, пр-т Леси
-                            Украинки, 26</a></li>
-                    <li class="footer-item"><a class="contact-link"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li class="footer-item"><a class="contact-link" href="tel:+380961111111">+38
-                            096 111 11 11</a></li>
-                </ul>
+        <div class=" container ">
+            <div class="footer-adress">
+                <a href="./index.html" class="logo">
+                    <span class="logo-blue">Web</span>Studio
+                </a>
+                <address>
+                    <ul class="list">
+                        <li class="footer-item"><a target="_blank" class="address-ofice" rel="noreferrer noopener"
+                                href=" https://goo.gl/maps/ZoGBy2pLPGvZENqX7">
+                                г.Киев, пр-т Леси
+                                Украинки, 26</a></li>
+                        <li class="footer-item"><a class="contact-link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-item"><a class="contact-link" href="tel:+380961111111">+38
+                                096 111 11 11</a></li>
+                    </ul>
+            </div>
             </address>
+            <div class="footer-media">
+                <h2>присоединяйтесь</h2>
+                <ul class="employee-list-media">
+                    <li class="item-media">
+                        <a class="link-media" href="">
+                            <svg class="media-svg">
+                                <use href="./images/icon.svg#insta"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-media">
+                        <a class="link-media" href="">
+                            <svg class="media-svg">
+                                <use href="./images/icon.svg#twiter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-media">
+                        <a class="link-media" href="">
+                            <svg class="media-svg">
+                                <use href="./images/icon.svg#facebok"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-media">
+                        <a class="link-media" href="">
+                            <svg class="media-svg">
+                                <use href="./images/icon.svg#linkendin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
