--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li class="item">
                         <a class="contact-link" href="mailto:info@devstudio.com">
                             <div class="moilto">
-                                <svg class=" icon">
+                                <svg currentColor class=" icon">
                                     <use href="./images/icon.svg#icon-envelope"></use>
                                 </svg>info@devstudio.com
                             </div>
